fix navbar spacing

--- a/src/pages/CollegePoc/CollegePocDashb.css
+++ b/src/pages/CollegePoc/CollegePocDashb.css
@@ -90,7 +90,7 @@ body, html, #root {
   }
   
   .icon {
-    margin-right: 1rem;
+    margin-right: 0.5rem;
   }
   
   .content {
