--- a/src/pages/PocHead/PocHeadDashb.css
+++ b/src/pages/PocHead/PocHeadDashb.css
@@ -96,18 +96,41 @@ body, html, #root {
     list-style-type: none;
     margin-top: 20px;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   .nav-item {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin: 1rem;
+    height: 4rem;
+    width: 15rem;
+    background-color: #FCF7F8;
+    text-decoration: none;
+    color: black;
+    border-radius: 15px;
+    font-size: 1rem;
+  }
+
+  .nav-item-active{
+    font-family: 'Poppins', sans-serif;
+    background-color: #9ecef366;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
   }
   
   .nav-link {
     font-family: 'Poppins', sans-serif;
     color: #343a40;
     text-decoration: none;
-    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .nav-link:hover {
@@ -117,10 +140,6 @@ body, html, #root {
   .nav-item.active .nav-link {
     color: #0056b3;
     font-weight: bold;
-  }
-  
-  .icon {
-    margin-right: 1rem;
   }
   
   .content {
@@ -148,6 +167,10 @@ body, html, #root {
     font-weight: 500;
     color: #383838;
     margin: 0;
+  }
+  
+  .icon{
+    margin-right: 0.2rem;
   }
   
 
