--- a/src/pages/Student/StudentDashb.css
+++ b/src/pages/Student/StudentDashb.css
@@ -109,7 +109,7 @@ body, html, #root {
   }
   
   .icon {
-    margin-right: 1rem;
+    margin-right: 0.5rem;
   }
   
   .content {
